styles/dark.scss
.dark {
  input {
    background: #1a202c;
    color: white;
  }
  .prose {
    *:not(pre)>code:not([class]) {
      @apply bg-gray-400;
    }
  }

}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }

  body {
    color: white;
    background: black;
  }
}

